Bumped version, added the deprecation warning
Signed-off-by: Martin Weise <martin.weise@tuwien.ac.at>